<resources>
    <string name="app_name">Book Club Multiple Activity App</string>
    <string name="number_of_ratings">Number of Ratings: %1$d</string>
    <string name="number_of_reviews">Number of Reviews: %1$d</string>
    <string name="number_of_pages">Number of Pages: %1$d</string>
    <string name="publishing_date">Publishing Date: %1$s</string>
    <string name="welcome_message">Hello, literary adventurers! As spring blooms around us, what better way to celebrate the season of renewal than with a fresh batch of captivating reads? This month, the "Page Turners Paradise" Book Club has scoured the literary landscapes to bring you a selection that promises to whisk you away to worlds both known and uncharted, challenge your perceptions, and ignite your imagination.\n\nHappy reading, and remember: every page turned is a new journey begun!</string>
    <string name="expand_welcome_message">Expand welcome message</string>
    <string name="manage_books_description">Manage books</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_book">Add Book</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="numberOfPages">Number of Pages</string>
    <string name="save">Save</string>
</resources>